--- a/index.html
+++ b/index.html
@@ -1,128 +1,117 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Overflow by HTML5 UP</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body>
+<head>
+<title>Jorge's personal webpage</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
+<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.poptrox.min.js"></script>
+<script src="js/skel.min.js"></script>
+<script src="js/init.js"></script>
+<noscript>
+<link rel="stylesheet" href="css/skel-noscript.css" />
+<link rel="stylesheet" href="css/style.css" />
+</noscript>
+<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head><body>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
-				</header>
-				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
-				</footer>
-			</section>
-		
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>This is Overflow</h2>
-				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <a href="http://skeljs.org">skelJS</a>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license/">Creative Commons license</a>.</p>
-				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer>
-			</section>
-		
-		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
-					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
-				</div>
-			</article>
-		
-		<!-- Feature 2 -->
-			<article class="container box style1 left">
-				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
-					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
-				</div>
-			</article>
-		
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-				</div>
-			</article>
-		
-		<!-- Contact -->
-			<article class="container box style3">
-				<header>
-					<h2>Nisl sed ultricies</h2>
-					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
-				</header>
-				<form>
-					<div class="row half">
-						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
-						<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
-					</div>
-					<div class="row half">
-						<div class="12u">
-							<textarea name="message" placeholder="Message"></textarea>
-						</div>
-					</div>
-					<div class="row">
-						<div class="12u">
-							<ul class="actions">
-								<li><a href="#" class="button form">Send Message</a></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-			</article>
-		
-		<!-- Generic -->
-		<!--
+<!-- Header -->
+<section id="header">
+  <header>
+    <article id="first" class="style1 right"> <img src="images/me.png" alt="">
+      <div class="inner">
+        <h1>Hi, I am <strong>Jorge</strong></h1>
+        <p><strong>and I work in </strong>software development</p>
+      </div>
+    </article>
+  </header>
+  <footer> <a href="#banner" class="button style2 scrolly scrolly-centered">Learn more about me</a> </footer>
+</section>
+
+<!-- Banner -->
+<section id="banner">
+  <header>
+    <h2>Passion and skill, together</h2>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="4u">
+        <section> <span class="fa featured fa-code"></span>
+          <h3>Java-friendly</h3>
+          <p>Java SE, Android, and whatever comes close.</p>
+        </section>
+      </div>
+      <div class="4u">
+        <section> <span class="fa featured fa-suitcase"></span>
+          <h3>Agile advocate</h3>
+          <p>Scrum, XP, Kanban, Lean - because the customer is as important as insecure.</p>
+        </section>
+      </div>
+      <div class="4u">
+        <section> <span class="fa featured fa-comments-o"></span>
+          <h3>Teamwork player</h3>
+          <p>Promoting social interactions and collaborative development since 1991.</p>
+        </section>
+      </div>
+    </div>
+  </div>
+  <footer> <a href="#Portfolio" class="button style2 scrolly scrolly-centered">Take a peek at my work</a></footer>
+</section>
+
+<!-- Portfolio -->
+<section id="Portfolio">
+  <article class="container box style2">
+    <header>
+      <h2>Showcase</h2>
+      <p>Slack time is not always idle time.</p>
+    </header>
+    <div class="inner">
+      <div class="row flush">
+        <div id="LoLin1" class="3u"><a href="http://stoyicker.github.io/LoLin1" target="_blank" class="image full"><img src="images/android.svg" alt="" title="LoLin1"/></a></div>
+                <div id="lolin1-data-provider" class="3u"><a href="http://github.com/Stoyicker/lolin1-data-provider" target="_blank" class="image full"><img src="images/server.svg" alt="" title="lolin1-data-provider" /></a></div>
+      </div>
+    </div>
+  <footer> <a href="#Contact" class="button style2 scrolly scrolly-centered">Anything to say?</a></footer>
+  </article>
+</section>
+
+<!-- Contact -->
+<section id="Contact">
+<article class="container box style3">
+  <header>
+    <h2>Get in touch</h2>
+    <p>(And actually get a reply!)</p>
+  </header>
+  <form>
+    <div class="row half">
+      <div class="6u">
+        <input type="text" class="text" name="name" placeholder="Name" />
+      </div>
+      <div class="6u">
+        <input type="text" class="text" name="email" placeholder="Email" />
+      </div>
+    </div>
+    <div class="row half">
+      <div class="12u">
+        <textarea name="message" placeholder="Message"></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <div class="12u">
+        <ul class="actions">
+          <li><a href="#" class="button form">Send e-mail</a></li>
+        </ul>
+      </div>
+    </div>
+  </form>
+</article>
+</section>
+
+<!-- Generic --> 
+<!--
 			<article class="container box style3">
 				<header>
 					<h2>Generic Box</h2>
@@ -277,23 +266,8 @@
 				</section>
 			</article>
 		-->
-		
-		<section id="footer">
-			<ul class="icons">
-				<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>
-				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
-				<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
-				<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
-				<li><a href="#" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li>
-			</ul>
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
 
-	</body>
+<section id="footer">
+</section>
+</body>
 </html>
