Fixed the showcase

--- a/index.html
+++ b/index.html
@@ -70,44 +70,46 @@
     </header>
     <div class="inner">
       <div class="row flush">
-        <div id="LoLin1" class="3u"><a href="http://stoyicker.github.io/LoLin1" target="_blank" class="image full"><img src="images/android.svg" alt="" title="LoLin1"/></a></div>
-                <div id="lolin1-data-provider" class="3u"><a href="http://github.com/Stoyicker/lolin1-data-provider" target="_blank" class="image full"><img src="images/server.svg" alt="" title="lolin1-data-provider" /></a></div>
+        <div id="lolin1-data-provider" class="3u"><a href="http://github.com/Stoyicker/lolin1-data-provider" target="_blank" class="image full"><img style="display:inline" src="images/server.svg" alt="" title="lolin1-data-provider" /></a></div>
+        <div id="blank1" class="3u"><a class="image full"><img style="display:inline" src="images/blank.png"/></a></div>
+        <div id="blank2" class="3u"><a class="image full"><img style="display:inline" src="images/blank.png"/></a></div>
+        <div id="LoLin1" class="3u"><a href="http://stoyicker.github.io/LoLin1" target="_blank" class="image full"><img style="display:inline" src="images/android.svg" alt="" title="LoLin1"/></a></div>
       </div>
     </div>
-  <footer> <a href="#Contact" class="button style2 scrolly scrolly-centered">Anything to say?</a></footer>
+    <footer> <a href="#Contact" class="button style2 scrolly scrolly-centered">Anything to say?</a></footer>
   </article>
 </section>
 
 <!-- Contact -->
 <section id="Contact">
-<article class="container box style3">
-  <header>
-    <h2>Get in touch</h2>
-    <p>(And actually get a reply!)</p>
-  </header>
-  <form>
-    <div class="row half">
-      <div class="6u">
-        <input type="text" class="text" name="name" placeholder="Name" />
+  <article class="container box style3">
+    <header>
+      <h2>Get in touch</h2>
+      <p>(And actually get a reply!)</p>
+    </header>
+    <form>
+      <div class="row half">
+        <div class="6u">
+          <input type="text" class="text" name="name" placeholder="Name" />
+        </div>
+        <div class="6u">
+          <input type="text" class="text" name="email" placeholder="Email" />
+        </div>
       </div>
-      <div class="6u">
-        <input type="text" class="text" name="email" placeholder="Email" />
+      <div class="row half">
+        <div class="12u">
+          <textarea name="message" placeholder="Message"></textarea>
+        </div>
       </div>
-    </div>
-    <div class="row half">
-      <div class="12u">
-        <textarea name="message" placeholder="Message"></textarea>
+      <div class="row">
+        <div class="12u">
+          <ul class="actions">
+            <li><a href="#" class="button form">Send e-mail</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="12u">
-        <ul class="actions">
-          <li><a href="#" class="button form">Send e-mail</a></li>
-        </ul>
-      </div>
-    </div>
-  </form>
-</article>
+    </form>
+  </article>
 </section>
 
 <!-- Generic --> 
@@ -267,7 +269,6 @@
 			</article>
 		-->
 
-<section id="footer">
-</section>
+<section id="footer"> </section>
 </body>
 </html>
