--- a/index.html
+++ b/index.html
@@ -87,28 +87,35 @@
       <h2>Get in touch</h2>
       <p>(And actually get a reply!)</p>
     </header>
-    <form>
+    <form method="POST" name="contactform" action="mailto:jorge.diazbenitosoriano@gmail.com?subject=Personal webpage contact request" enctype="text/plain">
       <div class="row half">
         <div class="6u">
-          <input type="text" class="text" name="name" placeholder="Name" />
-        </div>
-        <div class="6u">
-          <input type="text" class="text" name="email" placeholder="Email" />
+          <input name="Name" type="text" class="text" name="name" placeholder="Name" />
         </div>
       </div>
       <div class="row half">
+      <div class="12u">
+          <input name="Subject" type="text" class="text" name="subject" placeholder="Subject" />
+      </div>
         <div class="12u">
-          <textarea name="message" placeholder="Message"></textarea>
+          <textarea name="Body" name="message" placeholder="Message"></textarea>
         </div>
-      </div>
+      </div><br>
       <div class="row">
         <div class="12u">
           <ul class="actions">
-            <li><a href="#" class="button form">Send e-mail</a></li>
+            <li>
+            <input type="submit" value="Send e-mail" class="button form"/>
+            </li>
           </ul>
         </div>
       </div>
     </form>
+    <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script> 
+    <script language="JavaScript">
+var frmvalidator  = new Validator("contactform");
+frmvalidator.addValidation("name","req","Please provide your name");
+</script> 
   </article>
 </section>
 
