--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ jQuery(document).ready(function() {
     <div class="inner">
       <div class="row flush">
         <div id="lolin1-data-provider" class="3u"><a href="http://github.com/Stoyicker/lolin1-data-provider" target="_blank" class="image full"><img style="display:inline" src="images/server.svg" alt="" title="lolin1-data-provider" /></a></div>
-        <div id="dp_report" class="3u"><a href="http://remotehost.herobo.com/degree_project/DP-DiazBenitoSoriano.pdf" target="_blank" class="image full"><img style="display:inline" src="images/document.svg"/></a></div>
-        <div id="blank2" class="3u"><a class="image full"><img style="display:inline" src="images/blank.png"/></a></div>
+        <div id="dp_report" class="3u"><a href="http://remotehost.herobo.com/degree_project/DP-DiazBenitoSoriano.pdf" target="_blank" class="image full"><img style="display:inline" src="images/document.svg"/></a></div>       
+        <div id="dp_demo" class="3u"><a href="https://www.youtube.com/watch?v=j4_82Of8PH4&list=PLUynSvFkCmvKpKrjn_FNWPmtURkH_SD9K" target="_blank" class="image full"><img style="display:inline" src="images/play.svg"/></a></div>
         <div id="LoLin1" class="3u"><a href="http://stoyicker.github.io/LoLin1" target="_blank" class="image full"><img style="display:inline" src="images/android.svg" alt="" title="LoLin1"/></a></div>
       </div>
     </div>
