Added GitHub footer link

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ frmvalidator.addValidation("name","req","Please provide your name");
 	border-bottom: none;"><span>Facebook</span></a>
     <li><a href="http://linkedin.com/in/jorgediazbenitosoriano" target="_blank" class="fa fa-linkedin solo" style="
 	border-bottom: none;"><span>LinkedIn</span></a></li>
+    <li><a href="http://github.com/Stoyicker" target="_blank" class="fa fa-github solo" style="
+	border-bottom: none;"><span>GitHub</span></a></li>
     <li><a href="http://twitter.com/JMangarinos" target="_blank" class="fa fa-twitter solo" style="
 	border-bottom: none;"><span>Twitter</span></a></li>
     </li>
