--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ jQuery(document).ready(function() {
             jQuery('.back-to-top').fadeOut(duration);
         }
     });
-    
+
     jQuery('.back-to-top').click(function(event) {
         event.preventDefault();
         jQuery('html, body').animate({scrollTop: 0}, duration);
@@ -40,7 +40,7 @@ jQuery(document).ready(function() {
 <!-- Header -->
 <section id="header" style>
   <header>
-    <article id="first" class="style1 right"> <img src="images/me.png" alt="">
+    <article id="first" class="style1 right"> <img src="images/me.jpg" alt="">
       <div class="inner">
         <h1>Hi, I am <strong>Jorge</strong></h1>
         <p><strong>and I work in </strong>software development</p>
@@ -129,11 +129,11 @@ jQuery(document).ready(function() {
         </div>
       </div>
     </form>
-    <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script> 
+    <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
     <script language="JavaScript">
 var frmvalidator  = new Validator("contactform");
 frmvalidator.addValidation("name","req","Please provide your name");
-</script> 
+</script>
   </article>
 </section>
 <section id="footer">
