Images cropped to circular shape

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
-<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 <script src="js/jquery.min.js"></script>
@@ -41,7 +41,7 @@ jQuery(document).ready(function() {
 <!-- Header -->
 <section id="header" style>
   <header>
-    <article id="first" class="style1 right"> <img src="images/me.jpg" alt="">
+    <article id="first" class="style1 right"> <img src="images/me.png" alt="">
       <div class="inner">
         <h1>Hi, I am <strong>Jorge</strong></h1>
         <p><strong>and I work in </strong>software development</p>
