--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ jQuery(document).ready(function() {
     <form method="POST" name="contactform" action="mailto:jorge.diazbenitosoriano@gmail.com?subject=Personal webpage contact request" enctype="text/plain">
       <div class="row half">
         <div class="12u">
-          <textarea name="" placeholder="Message"></textarea>
+          <textarea name="body" placeholder="Message"></textarea>
         </div>
       </div>
       <br>
