Added some updates to the second section

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
       <section>
         <header>
           <article>
-              <img src="images/me.png" alt="">
+            <img src="images/me.png" alt="">
             <div>
               <h1>Hello, I am Jorge</h1>
-              <h2>and I work within software development</h2>
+              <div class="container-odd">
+                <h2>and I work within software development</h2>
+              </div>
             </div>
           </article>
         </header>
@@ -59,6 +61,34 @@
               Reach me!</paper-button>
           </a>
         </footer>
+      </section>
+
+      <section id="skillset">
+        <header>
+          <h2>Passion and skill, together</h2>
+        </header>
+        <div class="container-odd">
+          <div horizontal layout>
+            <div flex>
+              <section>
+                <h3>Java-friendly</h3>
+                <p>Java SE, Java EE, Android, and whatever comes on the way.</p>
+              </section>
+            </div>
+            <div flex>
+              <section>
+                <h3>Agile advocate</h3>
+                <p>Scrum, XP, Kanban, Lean - because the customer is as important as insecure.</p>
+              </section>
+            </div>
+            <div flex>
+              <section>
+                <h3>Teamwork player</h3>
+                <p>Promoting social interactions and collaborative development since 1991.</p>
+              </section>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </core-header-panel>
