--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
               </section>
             </div>
             <div class="content-column" flex>
-            <section>
-              <core-icon icon="social:mood"></core-icon>
-              <h3>Teamwork player</h3>
-              <p>Promoting social interactions and collaborative development since 1991.</p>
-            </section>
+              <section>
+                <core-icon icon="social:mood"></core-icon>
+                <h3>Teamwork player</h3>
+                <p>Promoting social interactions and collaborative development since 1991.</p>
+              </section>
             </div>
             <div class="content-column" flex>
               <section>
@@ -93,6 +93,11 @@
           </div>
         </div>
       </section>
+    </div>
+    <div style="text-align: center; margin: 30px 0px 20px 0px;">
+      <p class="small">
+        <br> © 2015 Jorge Antonio Diaz-Benito Soriano
+      </p>
     </div>
   </core-header-panel>
 </body>
