--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
       <ul>
         <ul class="rrssb-buttons clearfix rrssb-1">
           <li class="rrssb-facebook" data-initwidth="14.285714285714286" data-size="64" style="width: calc(50% - 105px);">
-            <!-- Replace with your URL. For best results, make sure you page has the proper FB Open Graph tags in header:
-                        https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/ -->
-            <a href="https://www.facebook.com/sharer/sharer.php?u=http://kurtnoble.com/labs/rrssb/index.html">
+            <a target="_blank" href="https://www.facebook.com/Mangarinos">
               <span class="rrssb-icon">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
                   <path d="M27.825,4.783c0-2.427-2.182-4.608-4.608-4.608H4.783c-2.422,0-4.608,2.182-4.608,4.608v18.434
@@ -113,8 +111,7 @@
             </a>
           </li>
           <li class="rrssb-linkedin small" data-initwidth="14.285714285714286" data-size="53" style="width: 42px;">
-            <!-- Replace href with your meta and URL information -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://kurtnoble.com/labs/rrssb/index.html&amp;title=Ridiculously%20Responsive%20Social%20Sharing%20Buttons&amp;summary=Responsive%20social%20icons%20by%20KNI%20Labs">
+            <a href="http://www.linkedin.com/in/jorgediazbenitosoriano">
               <span class="rrssb-icon">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
                   <path d="M25.424,15.887v8.447h-4.896v-7.882c0-1.979-0.709-3.331-2.48-3.331c-1.354,0-2.158,0.911-2.514,1.803
@@ -129,7 +126,7 @@
           </li>
           <li class="rrssb-twitter small" data-initwidth="14.285714285714286" data-size="50" style="width: 42px;">
             <!-- Replace href with your Meta and URL information  -->
-            <a href="http://twitter.com/home?status=Ridiculously%20Responsive%20Social%20Sharing%20Buttons%20by%20@joshuatuscan%20and%20@dbox%20http://kurtnoble.com/labs/rrssb">
+            <a target="_blank" href="https://twitter.com/JMangarinos">
               <span class="rrssb-icon">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
                   <path d="M24.253,8.756C24.689,17.08,18.297,24.182,9.97,24.62c-3.122,0.162-6.219-0.646-8.861-2.32
@@ -144,7 +141,7 @@
             </a>
           </li>
           <li class="rrssb-github small" data-initwidth="14.285714285714286" data-size="44" style="width: 42px;">
-            <a href="https://github.com/kni-labs/rrssb">
+            <a href="https://github.com/Stoyicker">
               <span class="rrssb-icon">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
                   <path d="M13.971,1.571c-7.031,0-12.734,5.702-12.734,12.74c0,5.621,3.636,10.392,8.717,12.083c0.637,0.129,0.869-0.277,0.869-0.615
